[workspace]
members = ["fc-api", "fc-sdk", "fc-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.2.2"
authors = ["ArcBox Labs <oss@arcbox.dev>", "AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcboxlabs/firecracker-client"

[workspace.dependencies]
firecracker = { version = "0.2.2", path = "." }
fc-api = { version = "0.2.2", path = "fc-api" }
fc-sdk = { version = "0.2.2", path = "fc-sdk" }
fc-cli = { version = "0.2.2", path = "fc-cli" }
openapiv3 = "2"
progenitor = "0.11"
progenitor-client = "0.11"
prettyplease = "0.2"
serde_json = "1"
syn = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
libc = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
clap = { version = "4.5", features = ["derive"] }

[package]
name = "firecracker"
description = "Rust client SDK for the Firecracker microVM API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
bundled-runtime = ["dep:sha2"]

[dependencies]
fc-api.workspace = true
fc-sdk.workspace = true
sha2 = { workspace = true, optional = true }
